# serializer version: 1
# name: test_user_multiple_choice_field_renders_with_cleaned_query_data_for_field
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
        <li m-user-multiple-choice-item m-user-id="17">
          <input type="hidden" name="users" value="admin-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Admin_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="18">
          <input type="hidden" name="users" value="moderator">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Moderator
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="19">
          <input type="hidden" name="users" value="user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="20">
          <input type="hidden" name="users" value="other-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Other_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_cleaned_query_data_for_noscript_field
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="Admin_User Moderator User Other_User" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_field_initial_data
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
        <li m-user-multiple-choice-item m-user-id="5">
          <input type="hidden" name="users" value="admin-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Admin_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="6">
          <input type="hidden" name="users" value="moderator">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Moderator
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="7">
          <input type="hidden" name="users" value="user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="8">
          <input type="hidden" name="users" value="other-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Other_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="Admin_User Moderator User Other_User" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_form_initial_data
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
        <li m-user-multiple-choice-item m-user-id="1">
          <input type="hidden" name="users" value="admin-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Admin_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="2">
          <input type="hidden" name="users" value="moderator">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Moderator
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="3">
          <input type="hidden" name="users" value="user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
        <li m-user-multiple-choice-item m-user-id="4">
          <input type="hidden" name="users" value="other-user">
          <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
            <img class="form-chips-control-item-image" src="http://dummyimage.com/100/100" alt="">
            Other_User
            <span class="material-icon">clear</span>
          </button>
        </li>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="Admin_User Moderator User Other_User" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_with_query_data_for_noscript_field
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="Admin_User Moderator User Other_User" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_without_data
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="" >
    </noscript>
  '''
# ---
# name: test_user_multiple_choice_field_renders_without_query_data_for_field
  '''
  <ul class="form-chips-control d-js-flex" m-user-multiple-choice>
      
      <li>
        <input type="text" class="form-chips-control-input" id="id_users_0" m-user-multiple-choice-input>
      </li>
    </ul>
    <template id="m-user-multiple-choice-template">
      <li m-user-multiple-choice-item>
        <input type="hidden" name="users" value="">
        <button class="form-chips-control-item" type="button" aria-label="Remove user from field">
          <img class="form-chips-control-item-image" src="" alt="">
          <slot name="username"></slot>
          <span class="material-icon">clear</span>
        </button>
      </li>
    </template>
  
  
    <noscript>
      <input type="text" class="form-control" id="id_users_1" name="users_noscript" value="" >
    </noscript>
  '''
# ---
